# lab3_haskell

./: .gitignore  LICENSE  book.txt  lab3.cabal
app/: Main.hs
src/: Parser.hs  TextFormatter.hs  Tokenizer.hs  Types.hs
