cabal-version:      3.0
name:               lab3
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             bilykp
maintainer:         
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

library
    exposed-modules:
          Types
        , Parser
        , TextFormatter
        , Tokenizer
    hs-source-dirs:   src
    build-depends:
        base ^>=4.18.3.0
  default-language: Haskell2010

common warnings
    ghc-options: -Wall

executable lab3
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0
                     ,lab3
    hs-source-dirs:   app
    default-language: Haskell2010
